--- a/src/app/components/charts/survey-chart/survey-chart.component.scss
+++ b/src/app/components/charts/survey-chart/survey-chart.component.scss
@@ -1,21 +1,22 @@
-.header {
-    margin-bottom: 10px;
-
-    h3 {
-        font-size: 16px;
+.card-header {
+    p {
+        display: inline-block;
+        font-size: 14px;
+        line-height: 31px;
+        margin: 0px;
     }
 
     .button-group {
         float: right;
         border: 1px solid #c0cadd;
         color: #c0cadd;
-        font-size: 14px;
         display: flex;
         flex-direction: row;
         cursor: pointer;
 
         span {
-            padding: 7px 10px;  
+            // padding: 7px 10px;  
+            padding: 5px 8px;              
         }
 
         .sort-week {
@@ -65,16 +66,6 @@
     transition: color .15s ease-in-out, background-color .15s ease-in-out;
     background-color: #c0cadd;
     color: #000000;
-}
-
-.card {
-    font-size: 12px;
-    margin-bottom: 20px;
-    padding: 20px;
-}
-
-.card-body {
-    padding: 0;
 }
 
 canvas {
