--- a/src/app/components/supervisor-tools/manage-users/manage-users.component.scss
+++ b/src/app/components/supervisor-tools/manage-users/manage-users.component.scss
@@ -1,6 +1,12 @@
 .card {
     padding: 20px;
     height: 100%;
+    border: none;
+    border-radius: 2px;
+
+    .add-user {
+        float: right;
+    }
   }
 
   * {
