--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -145,10 +145,48 @@
             }
         }
 
-        .current-user {
+        .navbar {
             margin-left: auto;
             display: flex;
+            align-items: center;
+
+            .avatar {
+                width: 45px;
+                height: 45px;
+                border-radius: 50%;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: bold;
+                background-color: $light;
+                user-select: none;
+                cursor: pointer;
+            }
+
+            .dropdown-toggle::after {
+                display:none !important;
+            }
         }
+    }
+
+    .mobile-avatar {
+        background-color: $light;
+        margin-right: 15px;
+        border-radius: 50%;
+        padding: 10px;
+        height: 45px;
+        width: 45px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        user-select: none;
+        font-weight: bold;
+    }
+
+    .dropdown-toggle::after {
+        display:none !important;
     }
 
 
