--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,13 @@
-<h1>Page Not Found!</h1>
+<div class="wrapper">
+    <div class="top">
+        <img class="img-fluid" src="../../../assets/icon-404.png" alt="404 Not Found">
+    </div>
+    <div class="bottom">
+        <div class="exception-wrapper">
+            <span class="exception-summary">Page Not Found</span>
+            <span class="exception-detail">The resource you are looking for does not exist.</span>
+            <button routerLink="/dashboard" class="btn btn-primary">Dashboard</button>
+            <img src="../../../assets/skillamp-slim-color.png" alt="SkillAmp Logo" class="img-fluid">
+        </div>
+    </div>
+</div>
