--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -1,3 +1,9 @@
+@import '~sass/_variables';
+
 input.ng-invalid {
-  border: 1px solid red;
+  border: 1px solid $danger;
+}
+
+.card {
+  // padding: 50px;
 }
