--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,7 +7,7 @@ $danger: #ff5454;
 $warning: #fabb3d;
 $info: #67c2ef;
 $light: #cbd2db;
-$dark: #384042;
+$dark: #23272D;
 
 // Form Control
 $background-color: #F2F4F8;
@@ -21,9 +21,13 @@ $input-border-radius: 0;
 $text-muted: #9faecb;
 
 // Cards
-$card-border-width: 0;
+$card-border-radius: 0px;
+$card-border-color: #D9E0E7;
+$card-cap-color: #f9f9fa;
 
 // Buttons
 $btn-border-radius: 0;
+$btn-border-radius-lg: 0;
+$btn-border-radius-sm: 0;
 $btn-font-weight: 0;
 $btn-padding-x: 1.75rem;
