Remove all unused libraries and organize app module

--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -14,7 +14,8 @@
       <mat-paginator 
         class="leaderboardChart" 
         [length]="length"
-        [pageSizeOptions]="[5]">
+        [pageSizeOptions]="[5]"
+        (page)="onPageEvent($event)">
       </mat-paginator>
   </div>
   
